#fix: school hover button; testimonial move; team spacing/size

--- a/assets-src/sass/updates/_updates-country-home.scss
+++ b/assets-src/sass/updates/_updates-country-home.scss
@@ -46,9 +46,9 @@
             @extend %text-white;
         }
 
-        // .button {
-        //     @extend .bg-orange-lt;
-        // }
+        .button {
+            @extend .bg-orange-lt;
+        }
     }
 }
 
